# Trace

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitignore_docker  Design_Doc.md  Dockerfile.backend  Dockerfile.frontend  README.md  agent.py  agent_core.py  analyze_journal_entries.py  auth.py  config.json  database.py  docker-compose.yml  init.sql  journal_sentiment_analysis.py  main.py  migrate_sentiment_columns.py  models.py  package-lock.json  package.json  prompt_tool.py  pyproject.toml  sentiment_groups.json  start.sh  trace_analysis.py
prompts/: input_validation_prompt.py  main_agent_sys_prompt.py  summary_prompt.py  trace_analysis_prompt.py
public/: index.html  manifest.json
routes/: __init__.py  auth.py  chat.py  journal.py
sentiment_model_tf/: fingerprint.pb  saved_model.pb
sentiment_model_tf/variables/: variables.index
src/: App.jsx  index.css
src/Trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/components/: AnalysisModal.jsx  ChatHeader.jsx  FormTextField.jsx  HomeActionCard.jsx  LoadingDots.css  LoadingDots.jsx  MessageBubble.jsx  MessageInput.jsx  MessageList.jsx  TraceLogo.jsx  TraceWaveLogo.jsx
src/hooks/: useFormField.js
src/screens/: AnalysisScreen.jsx  BurnJournalScreen.jsx  ChatScreen.jsx  HomeScreen.jsx  LoginScreen.jsx  RegisterScreen.jsx  StartScreen.jsx
src/theme/: commonStyles.js
